WCMS-24611: corrected layout issues and add default value

--- a/src/components/SearchInput/search-input.scss
+++ b/src/components/SearchInput/search-input.scss
@@ -1,6 +1,11 @@
 .search-input-container {
+
     width: 100%;
     position: relative;
+
+    > div:has(input) {
+        width: 100%;
+    }
     
     input {
         max-width: none;
